llvm-toolchain-3.7 (1:3.7-3) UNRELEASED; urgency=medium

  * Update compiler-rt to simplify the port to Ubuntu precise
    ubuntu-precise-compiler-rt.diff

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 17 Sep 2015 14:47:17 +0200

llvm-toolchain-3.7 (1:3.7-2) unstable; urgency=medium

  * Remove CVE-2015-2305.patch. Already fixed upstream in a different
    way
  * Also generate liblldb-3.7-dbg
  * Select LLVM OpenMP as the default backend

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 28 Aug 2015 14:22:33 +0200

llvm-toolchain-3.7 (1:3.7-1) unstable; urgency=medium

  * New upstream release
  * Disable lldb on s390x, alpha & powerpc
    See https://llvm.org/bugs/show_bug.cgi?id=24548

  [ Gianfranco Costamagna ]
  * debian/patches/kfreebsd-build-fix.patch:
    - fix kfreebsd-* build failures by workarounding
      missing F_DUPFD_CLOEXEC (rebased patch from gnome-terminal
      10_kfreebsd-f_dupfd_cloexec.patch)

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 28 Aug 2015 08:59:58 +0200

llvm-toolchain-3.7 (1:3.7~+rc4-1) unstable; urgency=medium

  * New snapshot release

  [ Gianfranco Costamagna ]
  * d/control: Add more conflicting packages (python-clang and python-lldb)
    (Closes: #796811, #796843)

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 27 Aug 2015 08:53:59 +0200

llvm-toolchain-3.7 (1:3.7~+rc3-1) unstable; urgency=medium

  * New upstream snapshot
  * Remove an obsolete declaration about dragonegg
    (Closes: #796182)

  [ Luciano Bello ]
  * d/p/CVE-2015-2305.patch, fix security issue on regcomp.c

  [ Gianfranco Costamagna ]
  * Fix VCS fields.
  * Fix many lintian warning/errors
    - copyright fixes
    - updated overrides for v5 switch
    - d/control fixes on VCS fields and multiarch.
    - disabled ocaml documentation
  * d/p/bug783205.patch: rebase to 3.7.

  [ James Price ]
  * d/p/fix-cmake-config-prefix.diff: fix cmake path,
    needs a change after upstream revision r241080
    (Closes: #794905)
