@@ -3,6 +3,5 @@ clang/tools/scan-build/scan-build-@LLVM_VERSION@.1
 debian/man/clang-check-@LLVM_VERSION@.1
 debian/man/clang-tblgen-@LLVM_VERSION@.1
 debian/man/scan-view-@LLVM_VERSION@.1
-debian/man/clang-tidy-@LLVM_VERSION@.1
 debian/man/clang-apply-replacements-@LLVM_VERSION@.1
 debian/man/pp-trace-@LLVM_VERSION@.1
