@@ -1,0 +1,3 @@
+# I know but well...
+clang-@LLVM_VERSION@: manpage-has-useless-whatis-entry usr/share/man/man1/clang-tidy-@LLVM_VERSION@.1.gz
+
