@@ -2,6 +2,7 @@ llvm-toolchain-3.7 (1:3.7-3) UNRELEASED; urgency=medium
 
   * Update compiler-rt to simplify the port to Ubuntu precise
     ubuntu-precise-compiler-rt.diff
+  * Introduce clang-tidy as a new package
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 17 Sep 2015 14:47:17 +0200
 
